--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <div class="container">
     <header>
       <div class="header-text">
-        <h1>[NAMA LENGKAP]</h1>
+        <h1>irfan udin</h1>
         <div class="role">Calon Peserta UKK - Teknik Komputer dan Jaringan (TKJ)</div>
-        <div style="margin-top:10px;color:var(--muted)">Absensi: [NO ABSEN] &nbsp;|&nbsp; Kelas: [Sesuaikan]</div>
+        <div style="margin-top:10px;color:var(--muted)">Absensi: 6 &nbsp;|&nbsp; Kelas: XII TKJ 2</div>
       </div>
       <!-- Foto: simpan di folder images/photo.jpg -->
       <img src="images/photo.jpg" alt="Foto [NAMA]" class="photo">
@@ -44,15 +44,15 @@
       <main>
         <section class="card">
           <div class="section-title">Curriculum Vitae (Singkat)</div>
-          <p><strong>Nama:</strong> [irfan ]</p>
-          <p><strong>Tanggal Lahir:</strong> [malang,09,08,2006]</p>
-          <p><strong>Alamat:</strong> [malang,permanu,blau]</p>
-          <p><strong>Kontak:</strong> [088991552876 / email]</p>
+          <p><strong>Nama:</strong> irfan </p>
+          <p><strong>Tanggal Lahir:</strong> malang,09,08,2006</p>
+          <p><strong>Alamat:</strong> malang,permanu,blau</p>
+          <p><strong>Kontak:</strong> 088991552876 / i8159669@gmail.com</p>
           <hr>
           <div class="section-title">Pendidikan</div>
           <ul>
             <li>SMK Budi Mulia Pakisaji — Teknik Komputer & Jaringan</li>
-            <li>[SMP / SD sebelumnya — optional]</li>
+            <li>mts hidayatul ulum / SDN permanu 02 — optiona]</li>
           </ul>
 
           <div style="margin-top:12px" class="section-title">Pengalaman / Portofolio</div>
@@ -60,9 +60,9 @@
 
           <div style="margin-top:12px" class="section-title">Daftar Pelajaran Produktif TKJ yang Diingat</div>
           <ul>
-            <li>[Sesuaikan]</li>
-            <li>[Sesuaikan]</li>
-            <li>[Sesuaikan]</li>
+            <li>[IJ]</li>
+            <li>[PW]</li>
+            <li>[TJL]</li>
           </ul>
 
         </section>
