--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
         <section class="card" style="margin-top:16px">
           <div class="section-title">Daftar Mata Pelajaran Favorit</div>
           <ul>
-            <li>[Sesuaikan]</li>
-            <li>[Sesuaikan]</li>
-            <li>[Sesuaikan]</li>
+            <li>[ij]</li>
+            <li>[b indoneisa]</li>
+            <li>pai</li>
           </ul>
         </section>
 
