--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     .header-text{flex:1}
     h1{margin:0;font-size:28px;color:var(--accent)}
     .role{margin-top:6px;color:var(--muted)}
-    .photo{width:150px;height:150px;border-radius:8px;object-fit:cover;border:4px solid #fff;box-shadow:0 6px 16px rgba(0,0,0,0.08)}
+    .photo{width:150px;height:150px;border-radius:8px;object-fit:cover;border:4px solid #3a2a2a;box-shadow:0 6px 16px rgba(0,0,0,0.08)}
 
     .grid{display:grid;grid-template-columns:1fr 320px;gap:20px;margin-top:20px}
     .card{background:linear-gradient(0deg, rgba(255,255,255,1), rgba(255,255,255,0.94));padding:16px;border-radius:10px}
